@@ -8,6 +8,7 @@ CHANGELOG for Fall of Eden
 Version 0.3j
 ------------
 * Tweaked the contents of the tailor store.
+* Removed the lust barrier to the lizard win sex scenes.
 
 --------------------------------------------
              PREVIOUS VERSIONS
